# gitplot

./: .gitignore  LICENSE  README.md  design.md  license  pyproject.toml  requirements.txt
app/: main.py  plot.py  tk.py
data/: pokemon_demo.md  sample_design_doc_1.md.backup
env/: pyvenv.cfg
gitplot/: cli.py  git_tools.py  main.py  plot.py
gitsome/: __main__.py  cli.py  git_tools.py  main.py  parse.py  plot.py
tests/: test_cli.py  test_git_tools.py  test_main.py  test_parse.py  test_plot.py  test_tk.py
