[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitsome"
version = "0.0.1"
authors = [
	{ name="Natalie Beatty", email="natalie_beatty@proton.me"},
]
description = "A tool for comparing changes to git repositories over time."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://githup.com/nataliebeat/gitsome"
Issues = "https://github.com/nataliebeat/issues"
